# pindakaas

./: .gitattributes  .gitignore  .gitmodules  .woodpecker.yml  Cargo.toml  README.md  build.sh  picat.diff  rustfmt.toml
.github/workflows/: rust.yml
crates/c/: Cargo.toml  build.rs  pindakaas.h
crates/c/src/: lib.rs
crates/pindacaas/: Cargo.toml  cbindgen.toml  pindakaas.h
crates/pindacaas/src/: lib.rs
crates/pindakaas/: Cargo.toml  build.rs
crates/pindakaas-build-macros/: Cargo.toml
crates/pindakaas-build-macros/src/: ipasir_up.h  lib.rs
crates/pindakaas-cadical/: Cargo.toml  build.rs
crates/pindakaas-cadical/src/: ccadical_override.cpp  ccadical_up.h  lib.rs
crates/pindakaas-derive/: Cargo.toml
crates/pindakaas-derive/src/: lib.rs
crates/pindakaas-intel-sat/: Cargo.toml  build.rs
crates/pindakaas-intel-sat/src/: lib.rs
crates/pindakaas-kissat/: Cargo.toml  build.rs
crates/pindakaas-kissat/src/: build.h  ipasir.c  lib.rs
crates/pindakaas/corpus/cardinality/: test_card_eq_1_3.sol  test_card_eq_3_5.sol  test_card_le_2_3.sol
crates/pindakaas/corpus/cardinality/sorting_network/: test_card_2_2_le.sol  test_card_3_2_eq.sol  test_card_3_3_le.sol  test_card_4_2_eq.sol  test_card_4_2_le.sol  test_card_4_3_eq.sol  test_card_4_3_le.sol  test_card_4_4_le.sol  test_card_5_1_eq.sol  test_card_5_1_le.sol  test_card_5_3_le.sol  test_card_6_1_le.sol
crates/pindakaas/corpus/cardinality_one/: test_amo_neg_only.sol  test_amo_one_neg.sol  test_amo_triple.sol  test_eo_pair.sol
crates/pindakaas/corpus/cardinality_one/bitwise/: test_eo_bitwise.cnf
crates/pindakaas/corpus/cardinality_one/ladder/: test_eo_ladder.cnf
crates/pindakaas/corpus/cardinality_one/pairwise/: test_amo_pairwise1.sol  test_amo_pairwise3.cnf
crates/pindakaas/corpus/int/constrain/: bin_geq_2_test.sol  bin_le_bin_test.sol  bin_plus_bin_eq_bin_test.sol  bin_plus_bin_le_bin_test.sol  ord_geq_test.sol  ord_le_bin_test.sol  ord_plus_ord_le_bin_test.sol  ord_plus_ord_le_ord_test.sol
crates/pindakaas/corpus/linear/: test_small_eq_1.sol  test_small_eq_2.sol  test_small_eq_3.sol  test_small_eq_4.sol  test_small_le_2.sol  test_small_le_3.sol  test_small_le_4.sol
crates/pindakaas/corpus/linear/adder/: test_encoders.sol  test_pb_encode.cnf  test_pb_encode.sol
crates/pindakaas/corpus/linear/aggregator/: test_at_least_one_negated.cnf
crates/pindakaas/corpus/propositional_logic/: encode_prop_and_reif.cnf  encode_prop_and_reif.sol  encode_prop_equiv.cnf  encode_prop_equiv.sol  encode_prop_equiv_reif.cnf  encode_prop_equiv_reif.sol  encode_prop_implies_reif.cnf  encode_prop_implies_reif.sol  encode_prop_ite.cnf  encode_prop_ite.sol  encode_prop_ite_reif.cnf  encode_prop_ite_reif.sol  encode_prop_neg_equiv.cnf  encode_prop_or.sol  encode_prop_or_reif.cnf  encode_prop_or_reif.sol  encode_prop_xor.cnf  encode_prop_xor_neg1.sol  encode_prop_xor_neg2.sol  encode_prop_xor_neg3.sol  encode_prop_xor_reif.cnf  encode_prop_xor_reif.sol
crates/pindakaas/corpus/sorted/: test_2_sorted_eq.sol  test_3_2_sorted_eq.sol  test_3_sorted_eq.sol  test_4_2_sorted_eq.sol  test_4_3_sorted_eq.sol  test_4_sorted_eq.sol  test_5_1_sorted_eq_negated.sol  test_5_3_sorted_eq.sol  test_5_sorted_eq.sol
crates/pindakaas/src/: adder.rs  aggregate.rs  at_most_one.rs  bdd.rs  bench.rs  cardinality.rs  cardinality_one.rs  helpers.rs  int.rs  lib.rs  linear.rs  propositional_logic.rs  solver.rs  solvers.rs  sorted.rs  swc.rs  totalizer.rs  trace.rs
crates/pindakaas/src/at_most_one/: ladder.rs  pairwise.rs
crates/pindakaas/src/cardinality/: sorting_network.rs
crates/pindakaas/src/cardinality_one/: bitwise.rs  ladder.rs  pairwise.rs
crates/pindakaas/src/int/: bin.rs  con.rs  constrain.rs  decompose.rs  display.rs  dom.rs  enc.rs  helpers.rs  int_var.rs  model.rs  ord.rs  res.rs  scm.rs  term.rs
crates/pindakaas/src/linear/: adder.rs  aggregator.rs  bdd.rs  swc.rs  totalizer.rs
crates/pindakaas/src/solver/: cadical.rs  cmdline_solver.rs  intel_sat.rs  kissat.rs  libloading.rs  splr.rs
crates/pyndakaas/: Cargo.toml  pyproject.toml
crates/pyndakaas/src/: lib.rs
crates/python/: .gitignore  Cargo.toml
crates/python/src/: lib.rs
crates/traced_test/: Cargo.toml
crates/traced_test/src/: lib.rs
experiments/scm-full/: run.tex  slurm.json
experiments/scm-full/jsons/: BinAdderIncludeSkipBin0PbcEqNoneAdd-cls.json  BinAdderIncludeSkipBin0PbcEqNoneAdd-lits.json  BinAdderIncludeSkipBin0PbcEqNoneAdd-solve.json  BinAdderIncludeSkipBin0PbcEqNoneAdd-vars.json  BinAdderIncludeSkipBin0PbcEqNoneDnf-cls.json  BinAdderIncludeSkipBin0PbcEqNoneDnf-lits.json  BinAdderIncludeSkipBin0PbcEqNoneDnf-solve.json  BinAdderIncludeSkipBin0PbcEqNoneDnf-vars.json  BinAdderIncludeSkipBin0PbcEqNonePow-cls.json  BinAdderIncludeSkipBin0PbcEqNonePow-lits.json  BinAdderIncludeSkipBin0PbcEqNonePow-solve.json  BinAdderIncludeSkipBin0PbcEqNonePow-vars.json  BinAdderIncludeSkipBin0PbcEqNoneRca-cls.json  BinAdderIncludeSkipBin0PbcEqNoneRca-lits.json  BinAdderIncludeSkipBin0PbcEqNoneRca-solve.json  BinAdderIncludeSkipBin0PbcEqNoneRca-vars.json  BinBddIncludeSkipBin0MiniZincEqNoneAdd-cls.json  BinBddIncludeSkipBin0MiniZincEqNoneAdd-lits.json  BinBddIncludeSkipBin0MiniZincEqNoneAdd-solve.json  BinBddIncludeSkipBin0MiniZincEqNoneAdd-vars.json
experiments/scm-full/lps/: 15_1023_100_2047_100_100_1_sat.lp  15_1023_100_2047_100_100_2_sat.lp  15_1023_100_2047_100_100_3_sat.lp  15_1023_100_2047_10_100_1_sat.lp  15_1023_100_2047_10_100_2_sat.lp  15_1023_100_2047_10_100_3_sat.lp  15_1023_100_2047_11_100_1_sat.lp  15_1023_100_2047_11_100_2_sat.lp  15_1023_100_2047_11_100_3_sat.lp  15_1023_100_2047_12_100_1_sat.lp  15_1023_100_2047_12_100_2_sat.lp  15_1023_100_2047_12_100_3_sat.lp  15_1023_100_2047_13_100_1_sat.lp  15_1023_100_2047_13_100_2_sat.lp  15_1023_100_2047_13_100_3_sat.lp  15_1023_100_2047_14_100_1_sat.lp  15_1023_100_2047_14_100_2_sat.lp  15_1023_100_2047_14_100_3_sat.lp  15_1023_100_2047_15_100_1_sat.lp  (+3881 more)
experiments/scm-test/: slurm.json
src/: adder.rs  aggregate.rs  analyze.rs  cli.rs  formula.rs  helpers.rs  ilp.rs  lib.rs  main.rs  scm.rs  slurm.rs
(+57300 files in other folders)
