[package]
name = "pbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pindakaas = { path = "./bin/pindakaas/crates/pindakaas" }
itertools = "^0.10"
rand = "0.8.5"
clap = { version = "^4.0", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tracing = { version = "0.1.37", optional = true }
flate2 = "1.0.25"
tabled = "0.10.0"
bzip2 = "0.4.4"


[features]
trace = ["tracing", "pindakaas/trace"]
