[package]
name = "pindakaas-c"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"
build = "build.rs"

[lib]
name = "pindakaas"
crate-type = ["staticlib"]  

[dependencies]
pindakaas = { path = "../pindakaas" }

[build-dependencies]
cbindgen = "^0.20"
