[package]
name = "pindacaas"
description = "C interface to the pindakaas crate"
version = "0.1.0"
authors = [
	"Jip J. Dekker <jip.dekker@monash.edu>",
	"Hendrik 'Henk' Bierlee <hendrik.bierlee@monash.edu>"
]
license = "MPL-2.0"

edition = "2021"

[lib]
name = "cpindakaas"
crate-type = ["staticlib"]  

[dependencies]
pindakaas = { path = "../pindakaas" }
libc = "0.2"

[build-dependencies]
cbindgen = "^0.24"
