[package]
name = "pindakaas-cadical"
description = "build of the Cadical SAT solver for the pindakaas crate"
version = "2.0.0"
build = "build.rs"
links = "cadical"
exclude = ["vendor/cadical"]
include = ["vendor/cadical/src/*.cpp"]

authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[build-dependencies]
cc = { workspace = true }

[dependencies]
pindakaas-build-macros = { path = "../pindakaas-build-macros" }

[lints]
workspace = true
