[package]
name = "pindakaas-derive"
description = "derive macros for the pindakaas crate to connect to SAT solvers"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
