[package]
name = "pindakaas-intel-sat"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "intel_sat"
exclude = ["vendor/intel_sat"]
include = ["vendor/intel_sat/*.cc"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
pindakaas-build-macros = { path = "../pindakaas-build-macros" }
