[package]
name = "pindakaas-kissat"
version = "4.0.1"
edition = "2021"
build = "build.rs"
links = "kissat"
exclude = ["vendor/kissat"]
include = ["vendor/kissat/src/*.c"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
pindakaas-build-macros = { path = "../pindakaas-build-macros" }
