[package]
name = "pindakaas"
description = "Encoding Integer and Pseudo Boolean constraints into CNF"
version = "0.1.0"
authors = [
	"Jip J. Dekker <jip.dekker@monash.edu>",
	"Hendrik 'Henk' Bierlee <hendrik.bierlee@monash.edu>",
]
license = "MPL-2.0"

edition = "2021"

[dependencies]
cached = "0.46"
num = "0.4"
bzip2 = "0.4"
flate2 = "1.0"
itertools = "0.12.0"
rand = "0.8.5"
rustc-hash = "1.1"
# Dynamically load solver libraries (through IPASIR interfaces)
libloading = "0.8"

# Optional encoding tracing capabilities
tracing = { version = "0.1", optional = true }

# Optional Solver Interfaces
pindakaas-cadical = { path = "../pindakaas-cadical", optional = true }
pindakaas-derive = { path = "../pindakaas-derive", optional = true }
pindakaas-intel-sat = { path = "../pindakaas-intel-sat", optional = true }
pindakaas-kissat = { path = "../pindakaas-kissat", optional = true }
splr = { version = "0.17", optional = true }
iset = "0.2.2"

[build-dependencies]
itertools = "0.11"
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
splr = { version = "0.17", features = ["incremental_solver"] }
traced_test = { path = "../traced_test" }

[features]
cadical = ["pindakaas-cadical", "pindakaas-derive"]
intel-sat = ["pindakaas-intel-sat", "pindakaas-derive"]
kissat = ["pindakaas-kissat", "pindakaas-derive"]
trace = ["tracing"]
# default = ["cadical"]
ipasir-up = ["cadical"]
