[package]
name = "pindakaas"
description = "Encoding Integer and Pseudo Boolean constraints into CNF"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
cached = "0.53"
iset = "0.3"
itertools = "0.13"
rustc-hash = "2.0"
# Dynamically load solver libraries (through IPASIR interfaces)
libloading = "0.8"

# Optional encoding tracing capabilities
tracing = { workspace = true, optional = true }

# Optional Solver Interfaces
pindakaas-cadical = { path = "../pindakaas-cadical", optional = true }
pindakaas-derive = { path = "../pindakaas-derive", optional = true }
pindakaas-intel-sat = { path = "../pindakaas-intel-sat", optional = true }
pindakaas-kissat = { path = "../pindakaas-kissat", optional = true }
splr = { version = "0.17", optional = true }

[dev-dependencies]
expect-test = "1.5.0"
pindakaas-cadical = { path = "../pindakaas-cadical" }
pindakaas-derive = { path = "../pindakaas-derive" }
traced_test = { path = "../traced_test" }
tracing = { workspace = true }

[features]
cadical = ["pindakaas-cadical", "pindakaas-derive"]
intel-sat = ["pindakaas-intel-sat", "pindakaas-derive"]
kissat = ["pindakaas-kissat", "pindakaas-derive"]
default = ["cadical"]
ipasir-up = ["cadical"]

[lints]
workspace = true
