[package]
name = "pyndakaas"
description = "Python interface for the to pindakaas crate"
version = "0.1.0"
authors = [
	"Jip J. Dekker <jip.dekker@monash.edu>",
	"Hendrik 'Henk' Bierlee <hendrik.bierlee@monash.edu>",
]
license = "MPL-2.0"

edition = "2021"

[lib]
name = "pindakaas"
crate-type = ["cdylib"]
doc = false

[dependencies]
pindakaas = { path = "../pindakaas" }
pyo3 = { version = "0.19", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.19"
